--- a/assets/style.css
+++ b/assets/style.css
@@ -4,20 +4,28 @@
 
 h1,
 h2{
-    color: #2980b9;
+    color: #2c3e50;
     text-align: center;
 }
 
+body, html {
+    height: 100%;
+    display: grid;
+  }
+
 .container{
-    background-color: white;
-    margin: 10%;
-    filter: drop-shadow(0px 0px 2px #7f8c8d);
+    margin-top: 10%;
+    max-height: 400px;
 }
 
 section{
-    display: inline-block;
+    filter: drop-shadow(0px 0px 2px #7f8c8d);
+    padding: 20px;
+    background-color: white;
+    display: flex;
     width: 100%;
 }
+
 
 /* Reponsive grid cols */
 .col-1 {width: 8.33%;}
@@ -32,3 +40,29 @@ section{
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+
+.passGenButn{
+    background-color: #d63031;
+    border: none;
+    width: 50%;
+    border-radius: 12px;
+    color: white;
+}
+
+.clipboardButn{
+    color: white;
+    background-color: gray;
+    border: none;
+    width: 50%;
+    border-radius: 12px;
+}
+
+textarea{
+    width: 100%;
+    border-radius: 10px;
+    border: dashed 1px gray;
+}
+
+::placeholder{
+    text-align: center;
+}
